--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <span class="logo-icon">
             <span class="heart">♥</span>
           </span>
-          VivaMemória<span class="dot">.</span>
+          VivaMemória
         </a>
 
         <button class="cta-btn-nav">Criar Agora</button>
