--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <section class="combos section-padding bg-light" id="combos">
       <div class="container">
         <div class="section-header text-center">
-          <h2>Escolha seu Combo 💛</h2>
+          <h2>Escolha seu Combo</h2>
           <p>
             Quanto mais memórias, melhor o preço — e mais histórias para contar.
           </p>
@@ -255,33 +255,61 @@
         </div>
 
         <div class="combos-grid">
+          <!-- 4 Ímãs -->
           <div class="combo-card">
-            <h3>4 Ímãs 📸</h3>
+            <h3>4 Ímãs</h3>
             <p class="combo-price">R$ 34,90</p>
             <span class="combo-unit">R$ 8,72 por ímã</span>
-            <a href="#" class="btn btn-outline">Escolher</a>
+            <a
+              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20o%20combo%20de%204%20%C3%ADm%C3%A3s%20personalizados."
+              target="_blank"
+              class="btn btn-outline"
+            >
+              Escolher
+            </a>
           </div>
 
+          <!-- 6 Ímãs -->
           <div class="combo-card featured">
-            <span class="badge-combo">🔥 Mais vendido</span>
-            <h3>6 Ímãs ✨</h3>
+            <span class="badge-combo">Mais vendido</span>
+            <h3>6 Ímãs</h3>
             <p class="combo-price">R$ 49,90</p>
             <span class="combo-unit">R$ 8,31 por ímã</span>
-            <a href="#" class="btn btn-primary">Escolher agora</a>
+            <a
+              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20quero%20informa%C3%A7%C3%B5es%20sobre%20o%20combo%20de%206%20%C3%ADm%C3%A3s%20personalizados."
+              target="_blank"
+              class="btn btn-primary"
+            >
+              Escolher agora
+            </a>
           </div>
 
+          <!-- 10 Ímãs -->
           <div class="combo-card">
-            <h3>10 Ímãs 🎁</h3>
+            <h3>10 Ímãs</h3>
             <p class="combo-price">R$ 79,90</p>
             <span class="combo-unit">R$ 7,99 por ímã</span>
-            <a href="#" class="btn btn-outline">Escolher</a>
+            <a
+              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20gostaria%20de%20conhecer%20o%20combo%20de%2010%20%C3%ADm%C3%A3s%20personalizados."
+              target="_blank"
+              class="btn btn-outline"
+            >
+              Escolher
+            </a>
           </div>
 
+          <!-- 20 Ímãs -->
           <div class="combo-card">
-            <h3>20 Ímãs ❤️</h3>
+            <h3>20 Ímãs</h3>
             <p class="combo-price">R$ 149,90</p>
             <span class="combo-unit">R$ 7,49 por ímã</span>
-            <a href="#" class="btn btn-outline">Escolher</a>
+            <a
+              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20quero%20saber%20mais%20sobre%20o%20combo%20de%2020%20%C3%ADm%C3%A3s%20personalizados."
+              target="_blank"
+              class="btn btn-outline"
+            >
+              Escolher
+            </a>
           </div>
         </div>
       </div>
