--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Transforme suas memórias em ímãs personalizados com acabamento premium e qualidade fotográfica. O presente perfeito para eternizar momentos."
     />
 
-    <title>Memoria | Ímãs Premium Personalizados</title>
+    <title>VivaMemória | Suas melhores memórias</title>
 
     <!-- Google Fonts (ÚNICA combinação usada no site) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,6 +24,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./img/favicon-16x16.png"
+    />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
 
     <!-- CSS principal -->
     <link rel="stylesheet" href="style.css" />
@@ -33,10 +41,7 @@
     <nav class="navbar">
       <div class="container nav-container">
         <a href="#" class="logo">
-          <span class="logo-icon">
-            <span class="heart">♥</span>
-          </span>
-          VivaMemória
+          <img src="img/logo.png" alt="VivaMemória" class="logo-img" />
         </a>
 
         <button
@@ -198,37 +203,34 @@
         </div>
 
         <div class="gallery-grid">
-          <div class="gallery-item" data-story="0">
+          <!-- <div class="gallery-item" data-story="0">
             <img
               src="https://images.unsplash.com/photo-1526047932273-341f2a7631f9?q=80&w=600&auto=format&fit=crop"
               alt="Família"
             />
             <span class="story-label">Família</span>
-          </div>
+          </div> -->
 
-          <div class="gallery-item" data-story="1">
+          <!-- <div class="gallery-item" data-story="1">
             <img
               src="https://images.unsplash.com/photo-1472214103451-9374bd1c798e?q=80&w=600&auto=format&fit=crop"
               alt="Casal"
             />
             <span class="story-label">Casais</span>
-          </div>
+          </div> -->
 
           <div class="gallery-item" data-story="2">
-            <img
-              src="https://images.unsplash.com/photo-1516961642265-531546e84af2?q=80&w=600&auto=format&fit=crop"
-              alt="Momentos"
-            />
+            <img src="./img/4.png" alt="Momentos" />
             <span class="story-label">Momentos</span>
           </div>
 
-          <div class="gallery-item" data-story="3">
+          <!-- <div class="gallery-item" data-story="3">
             <img
               src="https://images.unsplash.com/photo-1511895426328-dc8714191300?q=80&w=600&auto=format&fit=crop"
               alt="Presentes"
             />
             <span class="story-label">Presentes</span>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -249,19 +251,20 @@
         <div class="section-header text-center">
           <h2>Escolha seu Combo</h2>
           <p>
-            Quanto mais memórias, melhor o preço — e mais histórias para contar.
+            Quanto mais memórias você escolhe, menor fica o valor por ímã. Todos
+            em metal premium com película protetora ✨
           </p>
           <div class="line"></div>
         </div>
 
         <div class="combos-grid">
-          <!-- 4 Ímãs -->
+          <!-- 6 Ímãs -->
           <div class="combo-card">
-            <h3>4 Ímãs</h3>
-            <p class="combo-price">R$ 34,90</p>
-            <span class="combo-unit">R$ 8,72 por ímã</span>
+            <h3>6 Ímãs</h3>
+            <p class="combo-price">R$ 79,90</p>
+            <span class="combo-unit">R$ 13,31 por ímã</span>
             <a
-              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20o%20combo%20de%204%20%C3%ADm%C3%A3s%20personalizados."
+              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20tenho%20interesse%20no%20combo%20de%206%20%C3%ADm%C3%A3s%20personalizados%20da%20VivaMem%C3%B3ria."
               target="_blank"
               class="btn btn-outline"
             >
@@ -269,14 +272,14 @@
             </a>
           </div>
 
-          <!-- 6 Ímãs -->
+          <!-- 8 Ímãs -->
           <div class="combo-card featured">
             <span class="badge-combo">Mais vendido</span>
-            <h3>6 Ímãs</h3>
-            <p class="combo-price">R$ 49,90</p>
-            <span class="combo-unit">R$ 8,31 por ímã</span>
+            <h3>8 Ímãs</h3>
+            <p class="combo-price">R$ 99,90</p>
+            <span class="combo-unit">R$ 12,48 por ímã</span>
             <a
-              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20quero%20informa%C3%A7%C3%B5es%20sobre%20o%20combo%20de%206%20%C3%ADm%C3%A3s%20personalizados."
+              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20quero%20o%20combo%20de%208%20%C3%ADm%C3%A3s%20personalizados%20da%20VivaMem%C3%B3ria."
               target="_blank"
               class="btn btn-primary"
             >
@@ -284,13 +287,13 @@
             </a>
           </div>
 
-          <!-- 10 Ímãs -->
+          <!-- 12 Ímãs -->
           <div class="combo-card">
-            <h3>10 Ímãs</h3>
-            <p class="combo-price">R$ 79,90</p>
-            <span class="combo-unit">R$ 7,99 por ímã</span>
+            <h3>12 Ímãs</h3>
+            <p class="combo-price">R$ 139,90</p>
+            <span class="combo-unit">R$ 11,66 por ímã</span>
             <a
-              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20gostaria%20de%20conhecer%20o%20combo%20de%2010%20%C3%ADm%C3%A3s%20personalizados."
+              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20tenho%20interesse%20no%20combo%20de%2012%20%C3%ADm%C3%A3s%20personalizados%20da%20VivaMem%C3%B3ria."
               target="_blank"
               class="btn btn-outline"
             >
@@ -298,13 +301,13 @@
             </a>
           </div>
 
-          <!-- 20 Ímãs -->
+          <!-- 16 Ímãs -->
           <div class="combo-card">
-            <h3>20 Ímãs</h3>
-            <p class="combo-price">R$ 149,90</p>
-            <span class="combo-unit">R$ 7,49 por ímã</span>
+            <h3>16 Ímãs</h3>
+            <p class="combo-price">R$ 179,90</p>
+            <span class="combo-unit">R$ 11,24 por ímã</span>
             <a
-              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20quero%20saber%20mais%20sobre%20o%20combo%20de%2020%20%C3%ADm%C3%A3s%20personalizados."
+              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20quero%20saber%20mais%20sobre%20o%20combo%20de%2016%20%C3%ADm%C3%A3s%20personalizados%20da%20VivaMem%C3%B3ria."
               target="_blank"
               class="btn btn-outline"
             >
@@ -315,7 +318,7 @@
       </div>
     </section>
 
-    <section class="testimonials section-padding">
+    <!-- <section class="testimonials section-padding">
       <div class="container">
         <div class="testimonials-wrapper">
           <div class="testimonial-card active">
@@ -338,7 +341,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="final-cta section-padding text-center">
       <div class="container">
@@ -356,10 +359,7 @@
         <!-- Marca -->
         <div class="footer-brand">
           <div class="footer-logo">
-            <span class="logo-icon">
-              <span class="heart">♥</span>
-            </span>
-            VivaMemória
+            <img src="img/logo2.png" alt="VivaMemória" class="logo-img" />
           </div>
           <p class="footer-description">
             Transformamos fotos em memórias físicas que duram para sempre.
@@ -378,27 +378,44 @@
         <div class="footer-social">
           <h4>Fale com a gente</h4>
           <div class="socials">
-            <a href="#" aria-label="Instagram">
+            <a
+              href="https://www.instagram.com/vivamemoriaa?igsh=MXc4Y213OWlsZ3ZwbQ=="
+              target="_blank"
+              aria-label="Instagram"
+            >
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="#" aria-label="WhatsApp">
+
+            <a
+              href="https://wa.me/5518997094916?text=Ol%C3%A1%21%20Vim%20pelo%20site%20da%20VivaMem%C3%B3ria%20e%20gostaria%20de%20tirar%20uma%20d%C3%BAvida."
+              target="_blank"
+              aria-label="WhatsApp"
+            >
               <i class="fab fa-whatsapp"></i>
             </a>
           </div>
+
           <span class="footer-cta">Atendimento rápido pelo WhatsApp 💬</span>
         </div>
       </div>
 
       <!-- Base -->
       <div class="footer-bottom">
-        <p>© 2024 VivaMemória. Feito com amor no Brasil 🇧🇷</p>
+        <p>© 2026 VivaMemória. Feito com amor no Brasil 🇧🇷</p>
       </div>
     </footer>
 
     <div class="story-modal" id="storyModal">
-      <div class="story-progress" id="storyProgress"></div>
+      <div class="story-header">
+        <div class="story-progress" id="storyProgress"></div>
+        <button id="closeStoryBtn">✕</button>
+      </div>
 
-      <img id="storyImage" />
+      <div class="story-content">
+        <div class="story-zone left"></div>
+        <img id="storyImage" />
+        <div class="story-zone right"></div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
