--- a/index.html
+++ b/index.html
@@ -60,26 +60,26 @@
     <header class="hero">
       <div class="container hero-grid">
         <div class="hero-content">
-          <span class="badge">Qualidade de Galeria</span>
+          <span class="badge">Ímãs fotográficos premium 🧲</span>
+
           <h1 class="hero-title">
-            Suas melhores memórias, <br />agora na sua geladeira.
+            Suas memórias merecem <br />
+            viver fora do celular 📸
           </h1>
+
           <p class="hero-subtitle">
-            Transforme fotos do rolo da câmera em ímãs premium com acabamento
-            vitrificado e qualidade fotográfica. O presente perfeito que dura
-            para sempre.
+            Transforme suas fotos em ímãs de metal com acabamento vitrificado ✨
+            A partir de <strong>R$ 9,90 por ímã</strong>, feitos para durar e
+            emocionar todos os dias 💛
           </p>
+
           <div class="hero-actions">
             <a href="#combos" class="btn btn-primary pulse-btn">
-              Crie o seu agora
+              Criar minhas memórias 💫
             </a>
-
-            <div class="trust-badge">
-              <i class="fas fa-star"></i>
-              <span>+5.000 clientes felizes</span>
-            </div>
           </div>
         </div>
+
         <div class="hero-visual">
           <div class="magnet-mockup-wrapper">
             <div class="magnet-card main-magnet">
@@ -251,8 +251,8 @@
         <div class="section-header text-center">
           <h2>Escolha seu Combo</h2>
           <p>
-            Quanto mais memórias você escolhe, menor fica o valor por ímã. Todos
-            em metal premium com película protetora ✨
+            Quanto mais memórias você escolhe, menor fica o valor por ímã. Ímãs
+            premium em metal com película protetora ✨
           </p>
           <div class="line"></div>
         </div>
@@ -261,10 +261,10 @@
           <!-- 6 Ímãs -->
           <div class="combo-card">
             <h3>6 Ímãs</h3>
-            <p class="combo-price">R$ 79,90</p>
-            <span class="combo-unit">R$ 13,31 por ímã</span>
+            <p class="combo-price">R$ 69,90</p>
+            <span class="combo-unit">R$ 11,65 por ímã</span>
             <a
-              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20tenho%20interesse%20no%20combo%20de%206%20%C3%ADm%C3%A3s%20personalizados%20da%20VivaMem%C3%B3ria."
+              href="https://wa.me/5518997094916?text=Tenho%20interesse%20no%20combo%20de%206%20%C3%ADm%C3%A3s%20VivaMem%C3%B3ria."
               target="_blank"
               class="btn btn-outline"
             >
@@ -273,27 +273,12 @@
           </div>
 
           <!-- 8 Ímãs -->
-          <div class="combo-card featured">
-            <span class="badge-combo">Mais vendido</span>
-            <h3>8 Ímãs</h3>
-            <p class="combo-price">R$ 99,90</p>
-            <span class="combo-unit">R$ 12,48 por ímã</span>
-            <a
-              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20quero%20o%20combo%20de%208%20%C3%ADm%C3%A3s%20personalizados%20da%20VivaMem%C3%B3ria."
-              target="_blank"
-              class="btn btn-primary"
-            >
-              Escolher agora
-            </a>
-          </div>
-
-          <!-- 12 Ímãs -->
           <div class="combo-card">
-            <h3>12 Ímãs</h3>
-            <p class="combo-price">R$ 139,90</p>
-            <span class="combo-unit">R$ 11,66 por ímã</span>
+            <h3>8 Ímãs</h3>
+            <p class="combo-price">R$ 79,90</p>
+            <span class="combo-unit">R$ 9,99 por ímã</span>
             <a
-              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20tenho%20interesse%20no%20combo%20de%2012%20%C3%ADm%C3%A3s%20personalizados%20da%20VivaMem%C3%B3ria."
+              href="https://wa.me/5518997094916?text=Quero%20o%20combo%20de%208%20%C3%ADm%C3%A3s%20VivaMem%C3%B3ria."
               target="_blank"
               class="btn btn-outline"
             >
@@ -301,13 +286,28 @@
             </a>
           </div>
 
+          <!-- 12 Ímãs -->
+          <div class="combo-card featured">
+            <span class="badge-combo">Mais vantajoso</span>
+            <h3>12 Ímãs</h3>
+            <p class="combo-price">R$ 119,90</p>
+            <span class="combo-unit">R$ 9,99 por ímã</span>
+            <a
+              href="https://wa.me/5518997094916?text=Quero%20o%20combo%20de%2012%20%C3%ADm%C3%A3s%20VivaMem%C3%B3ria."
+              target="_blank"
+              class="btn btn-primary"
+            >
+              Escolher agora💛
+            </a>
+          </div>
+
           <!-- 16 Ímãs -->
           <div class="combo-card">
             <h3>16 Ímãs</h3>
-            <p class="combo-price">R$ 179,90</p>
-            <span class="combo-unit">R$ 11,24 por ímã</span>
+            <p class="combo-price">R$ 158,40</p>
+            <span class="combo-unit"><strong>R$ 9,90 por ímã</strong></span>
             <a
-              href="https://wa.me/5518997094916?text=Ol%C3%A1%2C%20quero%20saber%20mais%20sobre%20o%20combo%20de%2016%20%C3%ADm%C3%A3s%20personalizados%20da%20VivaMem%C3%B3ria."
+              href="https://wa.me/5518997094916?text=Quero%20o%20combo%20de%2016%20%C3%ADm%C3%A3s%20VivaMem%C3%B3ria."
               target="_blank"
               class="btn btn-outline"
             >
@@ -348,7 +348,7 @@
         <h2>Pronto para eternizar seus momentos?</h2>
         <p>Frete grátis para compras acima de R$ 100,00.</p>
         <a href="#combos" class="btn btn-primary btn-large cta-pulse"
-          >Começar Agora</a
+          >Começar Agora💛</a
         >
         <p class="small-text">Satisfação garantida ou seu dinheiro de volta.</p>
       </div>
@@ -401,7 +401,7 @@
 
       <!-- Base -->
       <div class="footer-bottom">
-        <p>© 2026 VivaMemória. Feito com amor no Brasil 🇧🇷</p>
+        <p>© 2026 VivaMemória. Feito com amor💛</p>
       </div>
     </footer>
 
